--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -5,14 +5,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v2 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
+        uses: actions/checkout@v2
         with:
           persist-credentials: false
 
-      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+      - name: Install and Build 🔧
         run: |
           sudo apt install hugo
-          cd exampleSite
+          mkdir -p exampleSite/themes/hugo-starter-blog
+          mv archtypes layouts static theme.toml exampleSite/themes/hugo-starter-blog
+          cd exampleSite/themes/hugo-starter-blog
           hugo
 
       - name: Deploy 🚀
@@ -20,4 +22,4 @@ jobs:
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           BRANCH: gh-pages
-          FOLDER: public
+          FOLDER: exampleSite/public
