--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -14,7 +14,7 @@ jobs:
           sudo apt install hugo
           mkdir -p exampleSite/themes/hugo-starter-blog
           mv archetypes layouts static theme.toml exampleSite/themes/hugo-starter-blog
-          cd exampleSite/themes/hugo-starter-blog
+          cd exampleSite
           hugo
 
       - name: Deploy 🚀
