--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -11,7 +11,8 @@ jobs:
 
       - name: Install and Build 🔧
         run: |
-          sudo apt install hugo
+          wget https://github.com/gohugoio/hugo/releases/download/v0.72.0/hugo_extended_0.72.0_Linux-64bit.deb
+          sudo dpkg -i hugo_extended_0.72.0_Linux-64bit.deb
           mkdir -p exampleSite/themes/hugo-starter-blog
           mv archetypes layouts static theme.toml exampleSite/themes/hugo-starter-blog
           cd exampleSite
